set up front and backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,30 @@
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
+    "semantic-ui-css": "^2.3.0",
+    "semantic-ui-react": "^0.78.3",
+    "validator": "^9.4.1",
+    "react-redux": "^5.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+    "devDependencies": {
+      "eslint": "^4.18.2",
+      "eslint-config-airbnb": "15.0.1",
+      "eslint-config-prettier": "^2.9.0",
+      "eslint-plugin-import": "^2.9.0",
+      "eslint-plugin-jsx-a11y": "5.1.1",
+      "eslint-plugin-prettier": "^2.6.0",
+      "eslint-plugin-react": "^7.7.0",
+      "prettier": "^1.11.1"
+    }
 }
