--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.3.0",
+    "react-app-rewire-hot-loader": "^1.0.1",
+    "react-app-rewired": "^1.5.0",
     "react-dom": "^16.3.0",
+    "react-hot-loader": "^4.0.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
@@ -14,23 +18,21 @@
     "reselect": "^3.0.1",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
-    "validator": "^9.4.1",
-    "react-redux": "^5.0.7"
+    "validator": "^9.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom"
   },
-    "devDependencies": {
-      "eslint": "^4.18.2",
-      "eslint-config-airbnb": "15.0.1",
-      "eslint-config-prettier": "^2.9.0",
-      "eslint-plugin-import": "^2.9.0",
-      "eslint-plugin-jsx-a11y": "5.1.1",
-      "eslint-plugin-prettier": "^2.6.0",
-      "eslint-plugin-react": "^7.7.0",
-      "prettier": "^1.11.1"
-    }
+  "devDependencies": {
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "15.0.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.7.0",
+    "prettier": "^1.11.1"
+  }
 }
