--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "reselect": "^3.0.1",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
+    "tachyons": "^4.9.1",
     "validator": "^9.4.1"
   },
   "scripts": {
