--- a/react/package.json
+++ b/react/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "connected-react-router": "^4.3.0",
     "history": "^4.7.2",
+    "material-ui": "^1.0.0-beta.42",
     "moment": "^2.22.0",
     "react": "^16.3.0",
     "react-app-rewire-hot-loader": "^1.0.1",
