--- a/native/package.json
+++ b/native/package.json
@@ -21,6 +21,6 @@
   "dependencies": {
     "expo": "^26.0.0",
     "react": "16.3.0",
-    "react-native": "~0.54.1"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-23.0.0.tar.gz"
   }
 }
