--- a/native/package.json
+++ b/native/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.13.2",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "15.0.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.7.0",
     "jest-expo": "26.0.0",
+    "prettier": "^1.11.1",
+    "react-native-scripts": "1.13.2",
     "react-test-renderer": "16.3.0-alpha.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -21,6 +29,7 @@
   "dependencies": {
     "expo": "^26.0.0",
     "react": "16.3.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+    "react-native-elements": "^0.19.1"
   }
 }
